Show example configuration of the results_upload_uri

--- a/benchmark.cfg.example
+++ b/benchmark.cfg.example
@@ -28,3 +28,4 @@ clean=False
 clean_all=False
 #results_name=My Benchmarking Run %%Y-%%m-%%d %%H:%%M:%%S
 #results_environment=My Server Environment
+#results_upload_uri=https://example.com/uploads
