--- a/frameworks/Java/undertow/src/main/resources/hello/server.properties
+++ b/frameworks/Java/undertow/src/main/resources/hello/server.properties
@@ -1,7 +1,9 @@
 undertow.port = 8080
 undertow.host = ::
 
-mysql.jdbcUrl = jdbc:mysql://TFB-database:3306/hello_world?characterEncoding=UTF-8&cachePrepStmts=true&prepStmtCacheSize=250&prepStmtCacheSqlLimit=2048
+# We use the MySQL configuration recommended in HikariCP's documentation:
+# https://github.com/brettwooldridge/HikariCP/wiki/MySQL-Configuration
+mysql.jdbcUrl = jdbc:mysql://TFB-database:3306/hello_world?useServerPrepStmts=true&cachePrepStmts=true&prepStmtCacheSize=250&prepStmtCacheSqlLimit=2048
 mysql.username = benchmarkdbuser
 mysql.password = benchmarkdbpass
 mysql.connections = 32
