--- a/frameworks/Java/undertow/pom.xml
+++ b/frameworks/Java/undertow/pom.xml
@@ -15,6 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.hikaricp>2.6.1</version.hikaricp>
     <version.jackson>2.8.8</version.jackson>
+    <version.maven-dependency-plugin>2.10</version.maven-dependency-plugin>
     <version.maven-shade-plugin>2.4.3</version.maven-shade-plugin>
     <version.mongodb>3.4.2</version.mongodb>
     <version.mustache>0.9.4</version.mustache>
@@ -22,6 +23,10 @@
     <version.postgresql>42.0.0</version.postgresql>
     <version.undertow>1.4.12.Final</version.undertow>
   </properties>
+
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
 
   <dependencies>
     <dependency>
@@ -41,12 +46,22 @@
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
-      <artifactId>mongo-java-driver</artifactId>
+      <artifactId>mongodb-driver</artifactId>
+      <version>${version.mongodb}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-core</artifactId>
       <version>${version.mongodb}</version>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-async</artifactId>
+      <version>${version.mongodb}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>bson</artifactId>
       <version>${version.mongodb}</version>
     </dependency>
     <dependency>
@@ -67,6 +82,18 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <!-- The default version of the Maven dependency plugin seems to be
+             unable to execute "mvn dependency:analyze" properly, and specifying
+             a more recent version fixes that problem. -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${version.maven-dependency-plugin}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
