--- a/frameworks/Java/undertow/pom.xml
+++ b/frameworks/Java/undertow/pom.xml
@@ -81,6 +81,7 @@
   </dependencies>
 
   <build>
+    <finalName>hello-undertow</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
