--- a/frameworks/Java/undertow/pom.xml
+++ b/frameworks/Java/undertow/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>hello</groupId>
   <artifactId>hello-undertow</artifactId>
-  <version>1</version>
+  <version>1.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
